<resources>
    <string name="app_name">Project</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="account">Account</string>
    <string name="summary">Summary</string>
    <string name="budget">Budget</string>
    <string name="username">Username</string>
    <string name="user_email">username@example.com</string>
    <string name="title_activity_create_new_record">New</string>

    <string-array name="category">
        <item>Breakfask</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="record_type">
        <item>
            Expense
        </item>
        <item>
            Income
        </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_account">New</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
